# renku-test-environments

pygimli/: environment.yml
pygimli-pip/: requirements.txt
pygimli-poetry/: pyproject.toml
python-sudo/: project.toml
rstudio-conda-quarto/: Brewfile  environment.yml
rstudio-conda-quarto/init.d/: install-quarto-r.sh
stan-example/: environment.yml
unifr-evolutionary-genomics-practical1/: Brewfile  environment.yml  not-Brewfile  project.toml
unifr-evolutionary-genomics-practical1/finit.d/: install-gatk-picard.sh
unifr-evolutionary-genomics-practical1/init.d/: install-gatk-picard.sh
